--- a/Amazon_sentimental_Analysis.ipynb
+++ b/Amazon_sentimental_Analysis.ipynb
@@ -951,6 +951,150 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[0.         0.         0.         ... 0.         0.         0.        ]\n",
+            " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+            " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+            " ...\n",
+            " [0.         0.         0.         ... 0.         0.70710678 0.70710678]\n",
+            " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+            " [0.         0.         0.         ... 0.         0.         0.        ]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "x = tf.fit_transform(df['clean_review_text']).toarray()\n",
+        "print(x)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Bag of words"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.feature_extraction.text import CountVectorizer\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 48,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "CountVectorizer()"
+            ]
+          },
+          "execution_count": 48,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "features = CountVectorizer()\n",
+        "features.fit(df['clean_review_text'])\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 49,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "bagofWords = features.transform(df['clean_review_text'])\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Representation of output [note]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 50,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "  (0, 318)\t1\n",
+            "  (0, 404)\t1\n",
+            "  (0, 735)\t2\n",
+            "  (0, 742)\t1\n",
+            "  (0, 754)\t2\n",
+            "  (0, 835)\t1\n",
+            "  (0, 867)\t1\n",
+            "  (0, 952)\t1\n",
+            "  (0, 1081)\t1\n",
+            "  (0, 1111)\t1\n",
+            "  (0, 1280)\t1\n",
+            "  (0, 1691)\t1\n",
+            "  (0, 1692)\t1\n",
+            "  (0, 1769)\t1\n",
+            "  (0, 1890)\t1\n",
+            "  (0, 1962)\t1\n",
+            "  (0, 2134)\t1\n",
+            "  (0, 2141)\t3\n",
+            "  (0, 2228)\t1\n",
+            "  (0, 2244)\t1\n",
+            "  (0, 2680)\t1\n",
+            "  (0, 2889)\t1\n",
+            "  (0, 2940)\t2\n",
+            "  (0, 2961)\t1\n",
+            "  (0, 3373)\t3\n",
+            "  :\t:\n",
+            "  (2773, 2018)\t1\n",
+            "  (2773, 2709)\t1\n",
+            "  (2773, 2838)\t1\n",
+            "  (2773, 5002)\t1\n",
+            "  (2774, 3744)\t1\n",
+            "  (2774, 4540)\t1\n",
+            "  (2775, 5547)\t1\n",
+            "  (2775, 5548)\t1\n",
+            "  (2776, 3815)\t1\n",
+            "  (2776, 4786)\t1\n",
+            "  (2777, 648)\t1\n",
+            "  (2777, 1197)\t1\n",
+            "  (2777, 1379)\t1\n",
+            "  (2777, 1592)\t1\n",
+            "  (2777, 1996)\t1\n",
+            "  (2777, 2387)\t2\n",
+            "  (2777, 2405)\t1\n",
+            "  (2777, 2430)\t1\n",
+            "  (2777, 2745)\t1\n",
+            "  (2777, 3165)\t2\n",
+            "  (2777, 4069)\t1\n",
+            "  (2777, 4479)\t1\n",
+            "  (2777, 4540)\t1\n",
+            "  (2777, 4592)\t1\n",
+            "  (2777, 4778)\t2\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(bagofWords)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
