--- a/Amazon_sentimental_Analysis.ipynb
+++ b/Amazon_sentimental_Analysis.ipynb
@@ -1319,6 +1319,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 149,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "hey guys\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('hey guys')"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
