--- a/Amazon_sentimental_Analysis.ipynb
+++ b/Amazon_sentimental_Analysis.ipynb
@@ -1294,44 +1294,147 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": 155,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "ValueError",
-          "evalue": "Length of values does not match length of index",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[1;32m<ipython-input-147-602bf99db216>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'negative_reviews'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'scoreStatus'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'negative'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__setitem__\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   2936\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2937\u001b[0m             \u001b[1;31m# set column\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2938\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_item\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2939\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2940\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_setitem_slice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-            "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_set_item\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   2998\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2999\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_ensure_valid_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3000\u001b[1;33m         \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_sanitize_column\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3001\u001b[0m         \u001b[0mNDFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_item\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3002\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-            "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_sanitize_column\u001b[1;34m(self, key, value, broadcast)\u001b[0m\n\u001b[0;32m   3634\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3635\u001b[0m             \u001b[1;31m# turn me into an ndarray\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3636\u001b[1;33m             \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msanitize_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3637\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIndex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3638\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-            "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\internals\\construction.py\u001b[0m in \u001b[0;36msanitize_index\u001b[1;34m(data, index, copy)\u001b[0m\n\u001b[0;32m    609\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    610\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 611\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Length of values does not match length of index\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    612\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    613\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mABCIndexClass\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-            "\u001b[1;31mValueError\u001b[0m: Length of values does not match length of index"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "df['negative_reviews'] = [df[df['scoreStatus'] == 'negative']]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": 154,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "hey guys\n"
+          "data": {
+            "text/plain": [
+              "array(['Mamaearth-Onion-Growth-Control-Redensyl',\n",
+              "       'Mamaearth-Percent-Natural-Berry-Toothpaste',\n",
+              "       'Mamaearth-Natural-Turmeric-Saffron-brightning',\n",
+              "       'Mamaearth-Illuminate-Vitamin-Radiant-Turmeric',\n",
+              "       'Mamaearth-Blemishes-Pigmentation-Blemish-Mulberry',\n",
+              "       'Mamaearth-Face-Wash-100-ml',\n",
+              "       'Mamaearth-Moisturizing-Baby-Bathing-Oatmeal',\n",
+              "       'Godrej-Protekt-Master-Blaster-Handwash',\n",
+              "       'Godrej-No-1-Bathing-Soap-Lime',\n",
+              "       'Godrej-No-1-Bathing-Soap-Turmeric',\n",
+              "       'Godrej-Direct-Cool-Refrigerator-1905-PTDI',\n",
+              "       'Godrej-aer-Pocket-Bathroom-Fragrance',\n",
+              "       'Godrej-Security-Solutions-SEEC9060-Electronic',\n",
+              "       'Godrej-Matic-Spray-Violet-Valley',\n",
+              "       'Godrej-Security-Solutions-Goldilocks-Personal',\n",
+              "       'Godrej-ViroShield-Disinfecting-VIROSHIELD-30UV',\n",
+              "       'Titan-Analog-Black-Dial-Watch-1805NM01',\n",
+              "       'Titan-Analog-White-Dial-Watch-NK1639SL03',\n",
+              "       'Titan-Karishma-Analog-Blue-Watch-1774SM01',\n",
+              "       'Titan-Karishma-Analog-Black-Watch-NK1639SM02',\n",
+              "       'Titan-Octane-Analog-Silver-Watch-NK1650BM03',\n",
+              "       'Titan-Analog-Black-Dial-Watch-NK1730SL02',\n",
+              "       'Titan-Karishma-Analog-Champagne-Watch-NK1580YL05',\n",
+              "       'Titan-Analog-Gold-Dial-Watch-NK1650YM04',\n",
+              "       'Titan-Karishma-Analog-Black-NK1578SM04', 'Maaza-1-2L',\n",
+              "       'Paper-Boat-Aamras-Juice-250ml',\n",
+              "       'Indiana-Frutti-Cherries-Frooti-Multicolor',\n",
+              "       'Coca-Cola-300ml-Pack-6', 'Natural-Mango-Juice-1L-Pack',\n",
+              "       'Paper-Boat-Mixed-Fruit', 'Maggi-Masala-Noodles-Singles-840g',\n",
+              "       'Glucon-D-Glucose-Based-Beverage-Orange',\n",
+              "       'Natural-Festive-Delight-Assorted-Jelimals',\n",
+              "       'Amul-Butter-Pasteurised-100g-Pack', 'Amul-Cow-Ghee-500ml',\n",
+              "       'Amul-Fresh-Paneer-200g', 'Amul-Cacao-Chocolate-125g-Pack',\n",
+              "       'Amul-Cheese-Slices-200g-Pack', 'Amul-Fresh-Cream-250ml',\n",
+              "       'Amul-Pure-Ghee-Pouch-1L', 'Amul-Pro-500g-Pouch-Pack',\n",
+              "       'Amul-Gold-Milk-Homogenised-Standardised',\n",
+              "       'Patanjali-Cows-Ghee-1L',\n",
+              "       'PATANJALI-Aloe-Pimples-Moisturizing-150ml',\n",
+              "       'Patanjali-Shatavar-Mushli-Ashwagandha-Churna',\n",
+              "       'Patanjali-Kanti-Natural-Cleanser-Shampoo',\n",
+              "       'Patanjali-Ayurved-Ltd-CORO-NIL-Tablet',\n",
+              "       'Patanjali-UHT-Milk-1000-ml', 'Patanjali-Cows-Ghee-500ml',\n",
+              "       'Patanjali-Saundarya-Aloe-Vera-150ml',\n",
+              "       'Dettol-Disinfectant-Multi-Use-Hygiene-Liquid',\n",
+              "       'Dettol-Disinfectant-Cleaner-Home-Fresh',\n",
+              "       'Dettol-Liquid-Refill-Original-1500',\n",
+              "       'Dettol-Multi-Purpose-Disinfectant-Surfaces-Original',\n",
+              "       'Savlon-After-Shave-Lotion-1000',\n",
+              "       'Dettol-Original-Protection-Bathing-125gm',\n",
+              "       'Dettol-Detergent-Liquid-Laundry-Sanitizer-Spring-Blossom',\n",
+              "       'Dettol-Disinfectant-Liquid-Menthol-Cool',\n",
+              "       'Cinthol-Lime-Soap-100-Pack', 'Cinthol-Original-Soap-100-Pack',\n",
+              "       'Cinthol-Lime-Soap-100g-Pack', 'Cinthol-Original-Soap-100g-Pack',\n",
+              "       'Cinthol-Soap-125g-Pack-Free', 'Cinthol-Cool-Soap-100-Pack',\n",
+              "       'Cinthol-Confidence-Soap-100g-Pack', 'Cinthol-Cool-Soap-100g-Free',\n",
+              "       'Britannia-NutriChoice-Digestive-100g',\n",
+              "       'Britannia-Good-Day-Cashew-200g', 'Britannia-Marie-Gold-200g',\n",
+              "       'NutriChoice-Digestives-grain-Pack-200g',\n",
+              "       'Britannia-Vita-Marie-Gold-150g',\n",
+              "       'Britannia-50-50-Biscuits-Pouch-80g', 'Britannia-Nice-Time-150g',\n",
+              "       'Streax-Hair-Serum-Gloss-100ml',\n",
+              "       'Streax-Shampoo-Enriched-Extracts-Long-Lasting',\n",
+              "       'Streax-Vitalized-Hair-Serum-300',\n",
+              "       'Streax-Ultralights-Highlighting-Kit-Collection',\n",
+              "       'Streax-Shampoo-Colour-Natural-Black-25-ml-Pack',\n",
+              "       'Streax-Professional-Hold-Funkey-Colour',\n",
+              "       'Streax-Soft-Hair-Colour-Natural-Black-170',\n",
+              "       'Streax-Perfumed-Body-Peach-100ml',\n",
+              "       'Himalaya-4004G-Baby-Powder-400g',\n",
+              "       'Himalaya-Moisturizing-Aloe-Vera-200ml',\n",
+              "       'Himalaya-Baby-Shampoo-400-ml', 'Himalaya-4003F-Baby-Lotion-400ml',\n",
+              "       'Himalaya-Gift-Pack', 'Himalaya-Herbals-Baby-Lotion-400ml',\n",
+              "       'Himalaya-Herbals-Anti-Wrinkle-Cream',\n",
+              "       'Society-Tea-Regular-250g-Pouch', 'Society-Tea-Regular-Pouch-1kg',\n",
+              "       'Society-Tea-Masala-Jar-250g', 'Society-Tea-Minute-Masala-500g',\n",
+              "       'Society-Daily-Elachi-Premix-Pouch',\n",
+              "       'Society-Tea-Premium-Packet-1000g',\n",
+              "       'Society-Tea-Daily-Masala-Premix',\n",
+              "       'Society-Tea-Minute-Ginger-Lemongrass',\n",
+              "       'Society-Minute-Tea-Masala-500g', 'Tata-Tea-Gold-500g',\n",
+              "       'Tata-Tea-Premium-North-1kg', 'Tata-Tea-Gold-1kg',\n",
+              "       'Tata-Tea-Gold-Leaf-Pouch', 'Tata-Tea-Premium-1-5kg',\n",
+              "       'Tata-Premium-Leaf-South-500g', 'Tata-Agni-Leaf-Tea-1kg',\n",
+              "       'Fastrack-Casual-Analog-White-Watch-NK3121SM01',\n",
+              "       'Fastrack-Analog-Womens-6150SM04-NK6150SM04',\n",
+              "       'Fastrack-Casual-Analog-Blue-Watch-NK3124SL02',\n",
+              "       'Reflex-Activity-Tracker-Monitor-SWD90066PP01',\n",
+              "       'Fastrack-Economy-2013-Analog-Watch-NK3099SP05',\n",
+              "       'Fastrack-Casual-Analog-Grey-Watch-NK3121SL02',\n",
+              "       'Fastrack-Casual-Analog-White-Watch-NK3120SL01',\n",
+              "       'Fastrack-Analog-Silver-Dial-Watch-NK9332PP06',\n",
+              "       'Reflex-Activity-Tracker-Monitor-SWD90066PP02',\n",
+              "       'MYSORE-SANDAL-Mysore-Sandal-Talcum',\n",
+              "       'Mysore-Sandal-Bathing-Soap-125g', 'Mysore-Sandal-Gold-Soap-Pack',\n",
+              "       'Mysore-Whitening-Rejuvenating-Face-Pack',\n",
+              "       'Mysore-Sandal-Jasmine-Rose-Soap',\n",
+              "       'Mysore-Sandal-Millennium-Soap-150g',\n",
+              "       'Mysore-Sandal-Agarbathies-Pack-Box',\n",
+              "       'Mysore-Sandal-Soaps-Pack-Bars'], dtype=object)"
+            ]
+          },
+          "execution_count": 154,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.name.unique()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 157,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-157-566ead792a1e>, line 1)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-157-566ead792a1e>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    df['positive_reviews] = [df[df['scoresStatus'] == 'negative']]\u001b[0m\n\u001b[1;37m                                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ],
       "source": [
-        "print('hey guys')"
+        "df['positive_reviews] = [df[df['scoresStatus'] == 'negative']]\n"
       ]
     },
     {
