--- a/Amazon_sentimental_Analysis.ipynb
+++ b/Amazon_sentimental_Analysis.ipynb
@@ -1434,15 +1434,8 @@
         }
       ],
       "source": [
-        "df['positive_reviews] = [df[df['scoresStatus'] == 'negative']]\n"
+        "df['positive_reviews] = df[df['scoresStatus'] == 'negative']\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
