--- a/Amazon_sentimental_Analysis.ipynb
+++ b/Amazon_sentimental_Analysis.ipynb
@@ -1883,6 +1883,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Negative brands and Positive brands Drop "
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 498,
       "metadata": {},
@@ -2626,13 +2633,6 @@
       "source": [
         "df3.isnull().sum()\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
