--- a/Amazon_sentimental_Analysis.ipynb
+++ b/Amazon_sentimental_Analysis.ipynb
@@ -2614,25 +2614,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 511,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "scoreStatus     384\n",
-              "scoreStatus    2144\n",
-              "dtype: int64"
-            ]
-          },
-          "execution_count": 511,
-          "metadata": {},
-          "output_type": "execute_result"
+          "ename": "NameError",
+          "evalue": "name 'df3' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32m<ipython-input-1-767db6b968f9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf3\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misnull\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m: name 'df3' is not defined"
+          ]
         }
       ],
       "source": [
         "df3.isnull().sum()\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hllo world\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('Hllo world')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
