--- a/Amazon_sentimental_Analysis.ipynb
+++ b/Amazon_sentimental_Analysis.ipynb
@@ -2614,7 +2614,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [
         {
@@ -2625,7 +2625,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 53,
+          "execution_count": 56,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2635,20 +2635,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 55,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Hello world\n"
-          ]
-        }
-      ],
       "source": [
-        "print('Hello world')"
+        "# Algorithms"
       ]
     },
     {
