--- a/Amazon_sentimental_Analysis.ipynb
+++ b/Amazon_sentimental_Analysis.ipynb
@@ -1686,7 +1686,7 @@
       "metadata": {},
       "source": [
         "# Algorithms \n",
-        "## Logistic Regression"
+        "                                             Logistic Regression"
       ]
     },
     {
