--- a/Amazon_sentimental_Analysis.ipynb
+++ b/Amazon_sentimental_Analysis.ipynb
@@ -648,7 +648,7 @@
         }
       ],
       "source": [
-        "pip install vaderSentiment\n"
+        "# pip install vaderSentiment\n"
       ]
     },
     {
