--- a/Amazon_sentimental_Analysis.ipynb
+++ b/Amazon_sentimental_Analysis.ipynb
@@ -503,7 +503,7 @@
         "df['clean_review_text'] = [removeStopWords(stopWords,x) \n",
         "for x in df['clean_review_text']]\n",
         "\n",
-        "df['clean_review_text'] = df['clean_review_text'].str.replace('\\d+', '')\n"
+        "# df['clean_review_text'] = df['clean_review_text'].str.replace('\\d+', '')\n"
       ]
     },
     {
