--- a/Amazon_sentimental_Analysis.ipynb
+++ b/Amazon_sentimental_Analysis.ipynb
@@ -1744,14 +1744,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 293,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
-        "\n",
+        "print(\"\")\n",
         "# X_train, X_test, Y_train, Y_test"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
