--- a/TextAnalysiswithAmazonProductReviews.ipynb
+++ b/TextAnalysiswithAmazonProductReviews.ipynb
@@ -337,11 +337,11 @@
     {
      "data": {
       "text/plain": [
-       "Godrej         200\n",
+       "Himalaya       200\n",
        "Cinthol        200\n",
        "Mamaearth      200\n",
-       "Himalaya       200\n",
        "Titan          200\n",
+       "Godrej         200\n",
        "Streax         188\n",
        "Society        182\n",
        "Dettol         180\n",
@@ -352,15 +352,15 @@
        "Patanjali      152\n",
        "Britannia      120\n",
        "MYSORE          40\n",
+       "Paper           40\n",
        "Reflex          40\n",
        "Natural         40\n",
-       "Paper           40\n",
-       "Savlon          20\n",
-       "Maggi           20\n",
-       "Maaza           20\n",
        "Coca            20\n",
-       "Glucon          20\n",
+       "Savlon          20\n",
        "PATANJALI       20\n",
+       "Maaza           20\n",
+       "Maggi           20\n",
+       "Glucon          20\n",
        "NutriChoice     12\n",
        "Indiana          6\n",
        "Name: brandName, dtype: int64"
@@ -679,7 +679,7 @@
      "text": [
       "[nltk_data] Downloading package punkt to\n",
       "[nltk_data]     C:\\Users\\kshit\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping tokenizers\\punkt.zip.\n"
+      "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     },
     {
@@ -1848,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1878,67 +1878,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting spacy\n",
-      "  Downloading spacy-3.2.2-cp38-cp38-win_amd64.whl (11.6 MB)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (49.2.0.post20200714)\n",
-      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (1.18.5)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (20.4)\n",
-      "Collecting spacy-legacy<3.1.0,>=3.0.8\n",
-      "  Downloading spacy_legacy-3.0.8-py2.py3-none-any.whl (14 kB)\n",
-      "Collecting preshed<3.1.0,>=3.0.2\n",
-      "  Downloading preshed-3.0.6-cp38-cp38-win_amd64.whl (113 kB)\n",
-      "Requirement already satisfied: jinja2 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (2.11.2)\n",
-      "Collecting srsly<3.0.0,>=2.4.1\n",
-      "  Downloading srsly-2.4.2-cp38-cp38-win_amd64.whl (452 kB)\n",
-      "Collecting catalogue<2.1.0,>=2.0.6\n",
-      "  Downloading catalogue-2.0.6-py3-none-any.whl (17 kB)\n",
-      "Collecting blis<0.8.0,>=0.4.0\n",
-      "  Downloading blis-0.7.5-cp38-cp38-win_amd64.whl (6.6 MB)\n",
-      "Collecting pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4\n",
-      "  Downloading pydantic-1.8.2-cp38-cp38-win_amd64.whl (2.0 MB)\n",
-      "Collecting typer<0.5.0,>=0.3.0\n",
-      "  Downloading typer-0.4.0-py3-none-any.whl (27 kB)\n",
-      "Collecting langcodes<4.0.0,>=3.2.0\n",
-      "  Downloading langcodes-3.3.0-py3-none-any.whl (181 kB)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (2.24.0)\n",
-      "Collecting wasabi<1.1.0,>=0.8.1\n",
-      "  Downloading wasabi-0.9.0-py3-none-any.whl (25 kB)\n",
-      "Collecting murmurhash<1.1.0,>=0.28.0\n",
-      "  Downloading murmurhash-1.0.6-cp38-cp38-win_amd64.whl (21 kB)\n",
+      "Requirement already satisfied: spacy in c:\\users\\kshit\\anaconda3\\lib\\site-packages (3.2.2)\n",
       "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (4.47.0)\n",
-      "Collecting pathy>=0.3.5\n",
-      "  Downloading pathy-0.6.1-py3-none-any.whl (42 kB)\n",
-      "Collecting spacy-loggers<2.0.0,>=1.0.0\n",
-      "  Downloading spacy_loggers-1.0.1-py3-none-any.whl (7.0 kB)\n",
-      "Collecting cymem<2.1.0,>=2.0.2\n",
-      "  Downloading cymem-2.0.6-cp38-cp38-win_amd64.whl (36 kB)\n",
-      "Collecting thinc<8.1.0,>=8.0.12\n",
-      "  Downloading thinc-8.0.13-cp38-cp38-win_amd64.whl (1.0 MB)\n",
-      "Requirement already satisfied: pyparsing>=2.0.2 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from packaging>=20.0->spacy) (2.4.7)\n",
-      "Requirement already satisfied: six in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from packaging>=20.0->spacy) (1.15.0)\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from jinja2->spacy) (1.1.1)\n",
-      "Collecting typing-extensions>=3.7.4.3\n",
-      "  Downloading typing_extensions-4.1.1-py3-none-any.whl (26 kB)\n",
+      "Requirement already satisfied: pathy>=0.3.5 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (0.6.1)\n",
+      "Requirement already satisfied: typer<0.5.0,>=0.3.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (0.4.0)\n",
+      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (1.0.1)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (2.0.6)\n",
+      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.8 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (3.0.8)\n",
+      "Requirement already satisfied: blis<0.8.0,>=0.4.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (0.7.5)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (20.4)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (2.24.0)\n",
+      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (1.18.5)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (2.11.2)\n",
+      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (2.0.6)\n",
+      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (3.3.0)\n",
+      "Requirement already satisfied: srsly<3.0.0,>=2.4.1 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (2.4.2)\n",
+      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (1.8.2)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (49.2.0.post20200714)\n",
+      "Requirement already satisfied: thinc<8.1.0,>=8.0.12 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (8.0.13)\n",
+      "Requirement already satisfied: wasabi<1.1.0,>=0.8.1 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (0.9.0)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (1.0.6)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (3.0.6)\n",
+      "Requirement already satisfied: smart-open<6.0.0,>=5.0.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from pathy>=0.3.5->spacy) (5.2.1)\n",
       "Requirement already satisfied: click<9.0.0,>=7.1.1 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from typer<0.5.0,>=0.3.0->spacy) (7.1.2)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (1.25.9)\n",
+      "Requirement already satisfied: six in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from packaging>=20.0->spacy) (1.15.0)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from packaging>=20.0->spacy) (2.4.7)\n",
       "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2.10)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2020.6.20)\n",
       "Requirement already satisfied: chardet<4,>=3.0.2 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (3.0.4)\n",
-      "Collecting smart-open<6.0.0,>=5.0.0\n",
-      "  Downloading smart_open-5.2.1-py3-none-any.whl (58 kB)\n",
-      "Installing collected packages: spacy-legacy, murmurhash, cymem, preshed, catalogue, srsly, blis, typing-extensions, pydantic, typer, langcodes, wasabi, smart-open, pathy, spacy-loggers, thinc, spacy\n",
-      "  Attempting uninstall: typing-extensions\n",
-      "    Found existing installation: typing-extensions 3.7.4.2\n",
-      "    Uninstalling typing-extensions-3.7.4.2:\n",
-      "      Successfully uninstalled typing-extensions-3.7.4.2\n",
-      "Successfully installed blis-0.7.5 catalogue-2.0.6 cymem-2.0.6 langcodes-3.3.0 murmurhash-1.0.6 pathy-0.6.1 preshed-3.0.6 pydantic-1.8.2 smart-open-5.2.1 spacy-3.2.2 spacy-legacy-3.0.8 spacy-loggers-1.0.1 srsly-2.4.2 thinc-8.0.13 typer-0.4.0 typing-extensions-4.1.1 wasabi-0.9.0\n"
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2020.6.20)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (1.25.9)\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from jinja2->spacy) (1.1.1)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4->spacy) (4.1.1)\n"
      ]
     }
    ],
@@ -1955,33 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "[E941] Can't find model 'en'. It looks like you're trying to load a model from a shortcut, which is obsolete as of spaCy v3.0. To load the model, use its full name instead:\n\nnlp = spacy.load(\"en_core_web_sm\")\n\nFor more details on the available models, see the models directory: https://spacy.io/models. If you want to create a blank model, use spacy.blank: nlp = spacy.blank(\"en\")",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-55-fc3b69b126df>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mspacy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mspacy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'en'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;31m# nlp = spacy.load(\"en_core_web_sm\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mspacy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlang\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0men\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mEnglish\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\spacy\\__init__.py\u001b[0m in \u001b[0;36mload\u001b[1;34m(name, vocab, disable, exclude, config)\u001b[0m\n\u001b[0;32m     49\u001b[0m     \u001b[0mRETURNS\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mLanguage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mThe\u001b[0m \u001b[0mloaded\u001b[0m \u001b[0mnlp\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m     \"\"\"\n\u001b[1;32m---> 51\u001b[1;33m     return util.load_model(\n\u001b[0m\u001b[0;32m     52\u001b[0m         \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvocab\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mvocab\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdisable\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdisable\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexclude\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mexclude\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconfig\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconfig\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m     )\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\spacy\\util.py\u001b[0m in \u001b[0;36mload_model\u001b[1;34m(name, vocab, disable, exclude, config)\u001b[0m\n\u001b[0;32m    424\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mload_model_from_path\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# type: ignore[arg-type]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    425\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mOLD_MODEL_SHORTCUTS\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 426\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mIOError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mErrors\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mE941\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfull\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mOLD_MODEL_SHORTCUTS\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# type: ignore[index]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    427\u001b[0m     \u001b[1;32mraise\u001b[0m \u001b[0mIOError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mErrors\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mE050\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    428\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mOSError\u001b[0m: [E941] Can't find model 'en'. It looks like you're trying to load a model from a shortcut, which is obsolete as of spaCy v3.0. To load the model, use its full name instead:\n\nnlp = spacy.load(\"en_core_web_sm\")\n\nFor more details on the available models, see the models directory: https://spacy.io/models. If you want to create a blank model, use spacy.blank: nlp = spacy.blank(\"en\")"
-     ]
-    }
-   ],
-   "source": [
-    "import spacy\n",
-    "spacy.load('en')\n",
-    "# nlp = spacy.load(\"en_core_web_sm\")\n",
-    "from spacy.lang.en import English"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1991,7 +1942,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-52-867f4aa92717>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnlp\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mspacy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"en_core_web_sm\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-53-867f4aa92717>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnlp\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mspacy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"en_core_web_sm\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m: name 'spacy' is not defined"
      ]
     }
