--- a/TextAnalysiswithAmazonProductReviews.ipynb
+++ b/TextAnalysiswithAmazonProductReviews.ipynb
@@ -1878,49 +1878,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: spacy in c:\\users\\kshit\\anaconda3\\lib\\site-packages (3.2.2)\n",
-      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (4.47.0)\n",
-      "Requirement already satisfied: pathy>=0.3.5 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (0.6.1)\n",
-      "Requirement already satisfied: typer<0.5.0,>=0.3.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (0.4.0)\n",
-      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (1.0.1)\n",
-      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (2.0.6)\n",
-      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.8 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (3.0.8)\n",
-      "Requirement already satisfied: blis<0.8.0,>=0.4.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (0.7.5)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (20.4)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (2.24.0)\n",
-      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (1.18.5)\n",
-      "Requirement already satisfied: jinja2 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (2.11.2)\n",
-      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (2.0.6)\n",
-      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (3.3.0)\n",
-      "Requirement already satisfied: srsly<3.0.0,>=2.4.1 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (2.4.2)\n",
-      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (1.8.2)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (49.2.0.post20200714)\n",
-      "Requirement already satisfied: thinc<8.1.0,>=8.0.12 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (8.0.13)\n",
-      "Requirement already satisfied: wasabi<1.1.0,>=0.8.1 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (0.9.0)\n",
-      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (1.0.6)\n",
-      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (3.0.6)\n",
-      "Requirement already satisfied: smart-open<6.0.0,>=5.0.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from pathy>=0.3.5->spacy) (5.2.1)\n",
-      "Requirement already satisfied: click<9.0.0,>=7.1.1 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from typer<0.5.0,>=0.3.0->spacy) (7.1.2)\n",
-      "Requirement already satisfied: six in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from packaging>=20.0->spacy) (1.15.0)\n",
-      "Requirement already satisfied: pyparsing>=2.0.2 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from packaging>=20.0->spacy) (2.4.7)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2.10)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (3.0.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2020.6.20)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (1.25.9)\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from jinja2->spacy) (1.1.1)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4->spacy) (4.1.1)\n"
+      "Requirement already up-to-date: spacy in c:\\users\\kshit\\anaconda3\\lib\\site-packages (3.2.2)\n",
+      "Requirement already satisfied, skipping upgrade: cymem<2.1.0,>=2.0.2 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (2.0.6)\n",
+      "Requirement already satisfied, skipping upgrade: blis<0.8.0,>=0.4.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (0.7.5)\n",
+      "Requirement already satisfied, skipping upgrade: requests<3.0.0,>=2.13.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (2.24.0)\n",
+      "Requirement already satisfied, skipping upgrade: packaging>=20.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (20.4)\n",
+      "Requirement already satisfied, skipping upgrade: pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (1.8.2)\n",
+      "Requirement already satisfied, skipping upgrade: spacy-loggers<2.0.0,>=1.0.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (1.0.1)\n",
+      "Requirement already satisfied, skipping upgrade: catalogue<2.1.0,>=2.0.6 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (2.0.6)\n",
+      "Requirement already satisfied, skipping upgrade: spacy-legacy<3.1.0,>=3.0.8 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (3.0.8)\n",
+      "Requirement already satisfied, skipping upgrade: thinc<8.1.0,>=8.0.12 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (8.0.13)\n",
+      "Requirement already satisfied, skipping upgrade: wasabi<1.1.0,>=0.8.1 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (0.9.0)\n",
+      "Requirement already satisfied, skipping upgrade: langcodes<4.0.0,>=3.2.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (3.3.0)\n",
+      "Requirement already satisfied, skipping upgrade: srsly<3.0.0,>=2.4.1 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (2.4.2)\n",
+      "Requirement already satisfied, skipping upgrade: setuptools in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (49.2.0.post20200714)\n",
+      "Requirement already satisfied, skipping upgrade: numpy>=1.15.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (1.18.5)\n",
+      "Requirement already satisfied, skipping upgrade: typer<0.5.0,>=0.3.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (0.4.0)\n",
+      "Requirement already satisfied, skipping upgrade: tqdm<5.0.0,>=4.38.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (4.47.0)\n",
+      "Requirement already satisfied, skipping upgrade: pathy>=0.3.5 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (0.6.1)\n",
+      "Requirement already satisfied, skipping upgrade: murmurhash<1.1.0,>=0.28.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (1.0.6)\n",
+      "Requirement already satisfied, skipping upgrade: preshed<3.1.0,>=3.0.2 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (3.0.6)\n",
+      "Requirement already satisfied, skipping upgrade: jinja2 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from spacy) (2.11.2)\n",
+      "Requirement already satisfied, skipping upgrade: certifi>=2017.4.17 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2020.6.20)\n",
+      "Requirement already satisfied, skipping upgrade: idna<3,>=2.5 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2.10)\n",
+      "Requirement already satisfied, skipping upgrade: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (1.25.9)\n",
+      "Requirement already satisfied, skipping upgrade: chardet<4,>=3.0.2 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (3.0.4)\n",
+      "Requirement already satisfied, skipping upgrade: six in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from packaging>=20.0->spacy) (1.15.0)\n",
+      "Requirement already satisfied, skipping upgrade: pyparsing>=2.0.2 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from packaging>=20.0->spacy) (2.4.7)\n",
+      "Requirement already satisfied, skipping upgrade: typing-extensions>=3.7.4.3 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4->spacy) (4.1.1)\n",
+      "Requirement already satisfied, skipping upgrade: click<9.0.0,>=7.1.1 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from typer<0.5.0,>=0.3.0->spacy) (7.1.2)\n",
+      "Requirement already satisfied, skipping upgrade: smart-open<6.0.0,>=5.0.0 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from pathy>=0.3.5->spacy) (5.2.1)\n",
+      "Requirement already satisfied, skipping upgrade: MarkupSafe>=0.23 in c:\\users\\kshit\\anaconda3\\lib\\site-packages (from jinja2->spacy) (1.1.1)\n"
      ]
     }
    ],
    "source": [
-    "!pip install spacy"
+    "!pip install -U spacy"
    ]
   },
   {
@@ -1932,22 +1932,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'spacy' is not defined",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "[E050] Can't find model 'en_core_web_sm'. It doesn't seem to be a Python package or a valid path to a data directory.",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-53-867f4aa92717>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnlp\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mspacy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"en_core_web_sm\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'spacy' is not defined"
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-55-407d9f5cf597>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mspacy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mnlp\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mspacy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"en_core_web_sm\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\spacy\\__init__.py\u001b[0m in \u001b[0;36mload\u001b[1;34m(name, vocab, disable, exclude, config)\u001b[0m\n\u001b[0;32m     49\u001b[0m     \u001b[0mRETURNS\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mLanguage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mThe\u001b[0m \u001b[0mloaded\u001b[0m \u001b[0mnlp\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m     \"\"\"\n\u001b[1;32m---> 51\u001b[1;33m     return util.load_model(\n\u001b[0m\u001b[0;32m     52\u001b[0m         \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvocab\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mvocab\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdisable\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdisable\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexclude\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mexclude\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconfig\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconfig\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m     )\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\spacy\\util.py\u001b[0m in \u001b[0;36mload_model\u001b[1;34m(name, vocab, disable, exclude, config)\u001b[0m\n\u001b[0;32m    425\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mOLD_MODEL_SHORTCUTS\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    426\u001b[0m         \u001b[1;32mraise\u001b[0m \u001b[0mIOError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mErrors\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mE941\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfull\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mOLD_MODEL_SHORTCUTS\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# type: ignore[index]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 427\u001b[1;33m     \u001b[1;32mraise\u001b[0m \u001b[0mIOError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mErrors\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mE050\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    428\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    429\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mOSError\u001b[0m: [E050] Can't find model 'en_core_web_sm'. It doesn't seem to be a Python package or a valid path to a data directory."
      ]
     }
    ],
    "source": [
+    "import spacy\n",
     "nlp=spacy.load(\"en_core_web_sm\")"
    ]
   },
