--- a/Amazon_sentimental_Analysis.ipynb
+++ b/Amazon_sentimental_Analysis.ipynb
@@ -1487,7 +1487,19 @@
         }
       ],
       "source": [
-        "print(features.get_feature_names())"
+        "# print(features.get_feature_names())\n",
+        "\n",
+        "# import these modules\n",
+        "from nltk.stem import PorterStemmer\n",
+        "from nltk.tokenize import word_tokenize\n",
+        "\n",
+        "ps = PorterStemmer()\n",
+        "\n",
+        "# choose some words to be stemmed\n",
+        "# words = [\"program\", \"programs\", \"programmer\", \"programming\", \"programmers\"]\n",
+        "\n",
+        "for w in words:\n",
+        "\tprint(w, \" : \", ps.stem(w))\n"
       ]
     },
     {
