--- a/TextAnalysiswithAmazonProductReviews.ipynb
+++ b/TextAnalysiswithAmazonProductReviews.ipynb
@@ -2039,6 +2039,130 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('comes', 0.9981339573860168),\n",
+       " ('almost', 0.9981259703636169),\n",
+       " ('big', 0.9980919361114502),\n",
+       " ('first', 0.9980764389038086),\n",
+       " ('disappointed', 0.9980664253234863),\n",
+       " ('may', 0.9980360865592957),\n",
+       " ('also', 0.9980271458625793),\n",
+       " ('box', 0.9980116486549377),\n",
+       " ('easy', 0.9980063438415527),\n",
+       " ('smell', 0.9980019927024841)]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = Word2Vec(sentences=reviewsVec, vector_size=100,\n",
+    "                 window=5, min_count=1, workers=4)\n",
+    "model.wv.most_similar('soothing')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('go', 0.9996179938316345),\n",
+       " ('know', 0.9995916485786438),\n",
+       " ('used', 0.9995843768119812),\n",
+       " ('think', 0.9995830655097961),\n",
+       " ('working', 0.9995793700218201),\n",
+       " ('india', 0.9995773434638977),\n",
+       " ('colour', 0.9995657801628113),\n",
+       " ('people', 0.9995657801628113),\n",
+       " ('godrej', 0.9995655417442322),\n",
+       " ('box', 0.9995648860931396)]"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = Word2Vec(sentences=reviewsVec, vector_size=100,\n",
+    "                 window=5, min_count=1, workers=4)\n",
+    "model.wv.most_similar('reviews')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('amazon', 0.9997013211250305),\n",
+       " ('good', 0.9996756911277771),\n",
+       " ('product', 0.999665379524231),\n",
+       " ('happy', 0.9996643662452698),\n",
+       " ('awesome', 0.9996640086174011),\n",
+       " ('quality', 0.9996459484100342),\n",
+       " ('price', 0.9996268153190613),\n",
+       " ('delivered', 0.9996193051338196),\n",
+       " ('box', 0.9996181726455688),\n",
+       " ('rs', 0.9996143579483032)]"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = Word2Vec(sentences=reviewsVec, vector_size=100,\n",
+    "                 window=5, min_count=1, workers=4)\n",
+    "model.wv.most_similar('packaging')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('box', 0.9978216886520386),\n",
+       " ('open', 0.9977834224700928),\n",
+       " ('seller', 0.9976537823677063),\n",
+       " ('contains', 0.9976045489311218),\n",
+       " ('poor', 0.9975900650024414),\n",
+       " ('comes', 0.9975778460502625),\n",
+       " ('inside', 0.9975758194923401),\n",
+       " ('battery', 0.9975619316101074),\n",
+       " ('either', 0.9975618124008179),\n",
+       " ('thick', 0.997558057308197)]"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = Word2Vec(sentences=reviewsVec, vector_size=100,\n",
+    "                 window=5, min_count=1, workers=4)\n",
+    "model.wv.most_similar('rating')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
