--- a/TextAnalysiswithAmazonProductReviews.ipynb
+++ b/TextAnalysiswithAmazonProductReviews.ipynb
@@ -6207,6 +6207,7 @@
     }
    ],
    "source": [
+    "# stemming kri ha yahan pr\n",
     "from nltk.stem import PorterStemmer\n",
     "porter = PorterStemmer()\n",
     "words = a\n",
