--- a/TextAnalysiswithAmazonProductReviews.ipynb
+++ b/TextAnalysiswithAmazonProductReviews.ipynb
@@ -5201,7 +5201,7 @@
     }
    ],
    "source": [
-    "# stemming kri ha yahan pr\n",
+    "# stemming \n",
     "from nltk.stem import PorterStemmer\n",
     "porter = PorterStemmer()\n",
     "words = a\n",
